nautilus/templates/Kubernetes/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: example
spec:
  selector:
    app: example
  ports:
    - name: http
      port: 80
      targetPort: 4000
